kubernetes/apps/observability/goldilocks/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
  annotations:
    gatus.home-operations.com/enabled: "true"
    gatus.home-operations.com/endpoint: |-
      conditions: ["len([BODY]) == 0"]
      group: internal
      dns:
        query-name: goldilocks.unscfleet.com
        query-type: A
      url: 1.1.1.1
spec:
  hostnames: ["goldilocks.unscfleet.com"]
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: goldilocks-dashboard
          namespace: observability
          port: 80
          weight: 1
